задание 2 - пи по формуле мадхавы-лейбница

--- a/consoleThreadTest/consoleThreadTest.vcxproj.filters
+++ b/consoleThreadTest/consoleThreadTest.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="consoleThreadTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Downloads\Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
