--- a/consoleThreadTest/consoleThreadTest.vcxproj.filters
+++ b/consoleThreadTest/consoleThreadTest.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="..\..\..\..\Downloads\Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="classTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="chrono.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
