--- a/consoleThreadTest/consoleThreadTest.vcxproj.filters
+++ b/consoleThreadTest/consoleThreadTest.vcxproj.filters
@@ -27,5 +27,11 @@
     <ClCompile Include="chrono.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Downloads\Source (1).cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="openmp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
