--- a/consoleThreadTest/consoleThreadTest.vcxproj
+++ b/consoleThreadTest/consoleThreadTest.vcxproj
@@ -117,6 +117,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,10 +141,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Downloads\Source (1).cpp" />
     <ClCompile Include="..\..\..\..\Downloads\Source.cpp" />
     <ClCompile Include="chrono.cpp" />
     <ClCompile Include="classTask.cpp" />
     <ClCompile Include="consoleThreadTest.cpp" />
+    <ClCompile Include="openmp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
